--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=literalura
+spring.datasource.url=jdbc:postgresql://localhost:5432/literalura
+#spring.datasource.username=${DB_POSTGRES_USER}
+spring.datasource.username=postgres
+spring.datasource.password=root
+#spring.datasource.password=${DB_POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
